--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <div id="app"></div>
 
     <!-- credits -->
-    <div class="text-center">
-        <p>
-            © 2020 SAFE-TRACE. All rights reserved. 
-        </p>
-       
-    </div>
+    <footer class="page-footer py-3">
+        <div class="footer-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center"><p class="mb-0">© 2020 WebsiteName. All rights reserved. </p></div>
+    </div></div></div></footer>    
 </body>
 </html>
